# fastapi

./: .gitignore  DockerFile  api.py  pyproject.toml  requirements.txt
ch03/: hello.py
ch03/model/: tag.py
ch03/service/: tag.py
ch03/web/: tag.py
ch04/: 4-1.py  4-2.py  4-3.py  4-4.py  greet_async.py  greet_async_uvicorn.py  starlette_hello.py
ch05/: 5-1-1.py  5-5.py  data.py  stuff.py  web.py
ch06/: 6-1.py  6-2.py  6-3.py  6-4.py  6-5.py
